examples/test/testpolicy14893.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14893
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key39: value0
      key38: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value4
          key32: value15
          key37: value17
      podSelector:
        matchLabels:
          key47: value29
